--- a/senpick/static/css/chat.css
+++ b/senpick/static/css/chat.css
@@ -27,16 +27,16 @@ body {
   text-align: left;
 }
 .chatbot-header h1 {
-  font-size: 38px;
+  font-size: 32px;
   font-weight: 700;
   color: #222;
   margin-top: 0;
   margin-bottom: 10px;
 }
 .chatbot-header p {
-  font-size: 22px;
+  font-size: 20px;
   color: #666;
-  font-weight: 400;
+  font-weight: 500;
 }
 /* 채팅 카드 */
 .chatbot-body {
@@ -62,28 +62,33 @@ body {
   flex-direction: column;
   flex-grow: 1;
 }
+
+.chat-window a {
+  width: 450px;
+}
+
 /* 공통 챗 메시지 스타일 */
 .chat-msg {
   display: inline-block;
   max-width: 68%;
-  margin: 12px auto 0 0;  /* 위, 오른쪽 auto(왼쪽 정렬), 아래, 왼쪽 0 */
-  padding: 13px 16px;
+  margin: 40px auto 0 0;  
+  padding: 20px;
 
   background: #ffffff;
-  color: #252525;
+  color: #2e2e2e;
 
-  border-radius: 15px;
-  box-shadow: 0 2px 10px rgba(44, 44, 44, 0.05);
+  border-radius: 20px;
+  /* box-shadow: 0 2px 10px rgba(44, 44, 44, 0.05); */
 
   font-size: 15px;
-  line-height: 1.55;
+  line-height: 1.4;
   word-break: break-word;
 }
 
 /* 유저 메시지 (오른쪽 정렬) */
 .chat-msg.user {
-  background: rgba(255, 233, 0, 0.18); /* 연노랑 배경 */
-  border-radius: 15px;
+  background: #FFFEE1; 
+  border-radius: 20px;
 
   margin-left: auto;
   margin-right: 0;
@@ -126,6 +131,11 @@ body {
 .chat-input-wrap input::placeholder {
   color: #b5b5b5;
   font-size: 16px;
+}
+
+.chatbot-subtitle {
+  margin-top: 0; 
+  margin-bottom: 20px; 
 }
 
 /* 전송 버튼 */
