--- a/senpick/static/css/chat.css
+++ b/senpick/static/css/chat.css
@@ -127,10 +127,10 @@ body {
   border: none;
   outline: none;
   background: transparent;
-  font-size: 17px;
+  font-size: 16px;
   flex: 1;
   padding: 8px 0;
-  color: #222;
+  color: #2e2e2e;
 }
 
 .chat-input-wrap input::placeholder {
