--- a/senpick/static/css/profile_delete.css
+++ b/senpick/static/css/profile_delete.css
@@ -1,11 +1,15 @@
 /* profile_delete.css */
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* 카드 본체 */
 .modal-card {
   background: #fff;
   border-radius: 16px;
   /* box-shadow: 0 4px 32px rgba(0,0,0,0.1); */
-  padding: 50px;
+  /* padding: 50px; */
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -170,6 +174,11 @@ label.step-option.step-option-other.active {
   padding: auto;
 }
 
+.img-wrapper img {
+  width: 400px;
+  height: auto;
+}
+
 /* ---------------profile_delete.html---------------- */
 .step {
   display: none;
@@ -182,6 +191,7 @@ label.step-option.step-option-other.active {
 .modal-card h2 {
   font-size: 25px;
   font-weight: bold;
+  margin-bottom: 0;
 }
 
 .modal-card h2 .font-cafe24 {
@@ -192,13 +202,17 @@ label.step-option.step-option-other.active {
   font-family: 'Cafe24Supermagic', cursive;
 }
 
+.modal-card p {
+  font-size: 16px;
+}
+
 .withdraw-card {
   text-align: center;
   margin: 0 auto;
 }
 
 .withdraw-card img {
-  max-width: 450px;
+  max-width: 400px;
 }
 
 .withdraw-card p {
@@ -214,20 +228,16 @@ label.step-option.step-option-other.active {
   align-items: center;
   gap: 20px;
   margin-top: 32px;
-  width: 500px;
-  height: 45px;
-  background-color: #F5F5F8;
-  border-radius: 12px;
+  /* width: 500px; */
+  /* height: 45px; */
+  /* background-color: #F5F5F8;
+  border-radius: 12px; */
   transition: background-color 0.2s ease;
-  align-self: center;;
+  align-self: center;
 }
 
 .modal-buttons button.cancel-btn {
   background-color: transparent;
-}
-
-.modal-buttons:hover{
-  background-color: #FFE900;
 }
 
 .think-again-btn {
@@ -348,5 +358,12 @@ label.step-option.step-option-other.active {
 }
 
 .center-card-container {
-  align-self: center;;
+  align-self: center;
+  flex-grow: 1;
+  background: white;
+  border-radius: 24px;
+  padding: 48px 70px;
+  max-width: 760px;
+  margin: 0 auto;
+  max-height: 750px;
 }
