--- a/senpick/static/css/profile_info.css
+++ b/senpick/static/css/profile_info.css
@@ -4,7 +4,7 @@
     padding: 150px 0;
     overflow-y: scroll;
     scrollbar-width: none;
-    padding: 26px;
+    /* padding: 26px; */
 }
 .profile-main {
   flex-grow: 1;
