--- a/senpick/app/templates/pswd.html
+++ b/senpick/app/templates/pswd.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
   <link rel="stylesheet" href="{% static 'css/slide.css' %}">
-  {% comment %} <link rel="stylesheet" href="{% static 'css/login.css' %}"> {% endcomment %}
+  <link rel="stylesheet" href="{% static 'css/login.css' %}">
   <link rel="stylesheet" href="{% static 'css/pswd.css' %}">
 
   <link rel="stylesheet" href="https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css">
@@ -16,45 +16,36 @@
   <script src="{% static 'js/pswd.js' %}" defer></script>
 </head>
 <body>
-  <div class="zoom-wrapper">
-    <div class="background">
-
-      <!-- 왼쪽 카드 (배경 역할만) -->
-      <div class="left-card"></div>
-
-
-      <!-- 절대 위치 요소들 -->
+  <div class="background">
+    <!-- 왼쪽 카드 (배경 역할만) -->
+    <div class="left-card">
       <img src="{% static 'images/senpick_logo.svg' %}" alt="Senpick 로고" class="logo">
-      
-      <div class="static-indicator-group">
-        <div class="static-dot static-dot-1 active"></div>
-        <div class="static-line static-line-1"></div>
-        <div class="static-dot static-dot-2"></div>
-        <div class="static-line static-line-2"></div>
-        <div class="static-dot static-dot-3"></div>
+      <div class="outer-wrapper">
+        <div class="login-wrapper">
+          <div class="static-indicator-group">
+            <div class="static-dot static-dot-1 active"></div>
+            <div class="static-line static-line-1"></div>
+            <div class="static-dot static-dot-2"></div>
+            <div class="static-line static-line-2"></div>
+            <div class="static-dot static-dot-3"></div>
+          </div>
+          <div class="text-block">
+            <h2 class="main-title">비밀번호 찾기</h2>
+            <p class="sub-title">가입 시 사용했던 이메일을 기입해주세요.</p>
+          </div>
+          <div class="form-block">
+            <form method="post" action="{% url 'login' %}" class="login-form">
+              {% csrf_token %}
+              <input type="email" name="username" id="email" placeholder="이메일 입력 (예:senpick@senpick.com)" required>
+              <div class="error-message" id="email-error">이메일을 필수 입력해주세요.</div>
+              <button type="submit" class="pswd-next">다음 단계</button>
+            </form>
+          </div>
+        </div>
       </div>
-      <div class="text-block">
-        <h2 class="main-title">비밀번호 찾기</h2>
-        <p class="sub-title">가입 시 사용했던 이메일을 기입해주세요.</p>
-      </div>
-
-      <div class="form-block">
-        <form method="post" action="{% url 'login' %}" class="login-form">
-          {% csrf_token %}
-          <input type="email" name="username" id="email" placeholder="이메일 입력 (예:senpick@senpick.com)" required>
-          <div class="error-message" id="email-error">이메일을 필수 입력해주세요.</div>
-          <button type="submit" class="pswd-next">다음 단계</button>
-        </form>
-      </div>
-
     </div>
-
-
-    
-
-
-      <!-- 슬라이드 포함 -->
-      {% include "slide.html" %}
+    <!-- 슬라이드 포함 -->
+    {% include "slide.html" %}
   </div>
 </body>
 </html>
