--- a/senpick/app/templates/signup/signup_step3.html
+++ b/senpick/app/templates/signup/signup_step3.html
@@ -16,7 +16,7 @@
       <!-- 왼쪽 폼 영역 -->
       <div class="signup-form-area">
         <!-- 로고 -->
-        <img src="{% static 'images/senpick_logo.svg' %}" alt="Senpick 로고" class="logo">
+        <img src="{% static 'images/senpick_logo.svg' %}" alt="Senpick 로고" class="logo" onclick="location.href=`{% url 'login' %}`">
         <div class="signup-form-wrapper">
           <div class="signup-form profile-form">
             <!-- 스텝 인디케이터 -->
