--- a/senpick/app/templates/login.html
+++ b/senpick/app/templates/login.html
@@ -32,14 +32,14 @@
       <div class="login-wrapper">
         <form method="post" action="{% url 'login' %}" class="login-form">
           {% csrf_token %}
-          <div class="input-group"  id="email-group">
+          <div class="input-group" id="email-group">
             <input type="email" name="username" id="email" placeholder="이메일 입력" required>
-            <div class="error-message" id="email-error">이메일을 입력해주세요.</div>
+            <div class="error-message" id="email-error" style="display: none;">이메일을 입력해주세요.</div>
           </div>
-        
+          
           <div class="input-group" id="password-group">
             <input type="password" name="password" id="password" placeholder="비밀번호 입력" required>
-            <div class="error-message" id="password-error">비밀번호를 입력해주세요.</div>
+            <div class="error-message" id="password-error" style="display: none;">비밀번호를 입력해주세요.</div>
           </div>
         
           <button type="submit" class="login-btn">로그인</button>
@@ -52,32 +52,6 @@
         </div>
       
         <button class="guest-btn">비회원으로 시작하기</button>
-      
-<!--         <div class="form-block">
-          <form method="post" action="{% url 'login' %}" class="login-form">
-            {% csrf_token %}
-            <div class="input-group"  id="email-group">
-              <input type="email" name="username" id="email" placeholder="이메일 입력" required>
-              <div class="error-message" id="email-error">이메일을 입력해주세요.</div>
-            </div>
-          
-            <div class="input-group" id="password-group">
-              <input type="password" name="password" id="password" placeholder="비밀번호 입력" required>
-              <div class="error-message" id="password-error">비밀번호를 입력해주세요.</div>
-            </div>
-          
-            <button type="submit" class="login-btn">로그인</button>
-          </form>
-
-      
-          <div class="or-group">
-            <div class="line-left"></div>
-            <div class="or-text">Or</div>
-            <div class="line-right"></div>
-          </div>
-        
-          <button class="guest-btn">비회원으로 시작하기</button>
-        </div> -->
         
         <div class="social-login">
           <img src="{% static 'images/kakao_login.svg' %}" alt="카카오 로그인">
